--- a/hv-bms-cellboard-sw.ioc
+++ b/hv-bms-cellboard-sw.ioc
@@ -49,8 +49,9 @@ Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SPI3
 Mcu.IP7=SYS
-Mcu.IP8=USART2
-Mcu.IPNb=9
+Mcu.IP8=TIM6
+Mcu.IP9=USART2
+Mcu.IPNb=10
 Mcu.Name=STM32G4A1KEUx
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PF0-OSC_IN
@@ -70,6 +71,7 @@ Mcu.Pin20=PB6
 Mcu.Pin21=PB7
 Mcu.Pin22=VP_SYS_VS_Systick
 Mcu.Pin23=VP_SYS_VS_DBSignals
+Mcu.Pin24=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin3=PA0
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
@@ -77,7 +79,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PB0
 Mcu.Pin9=PA8
-Mcu.PinsNb=24
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G4A1KEUx
@@ -205,7 +207,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_ADC3_Init-ADC3-false-HAL-true,6-MX_FDCAN1_Init-FDCAN1-false-HAL-true,7-MX_SPI3_Init-SPI3-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.ADC345Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
@@ -258,10 +260,14 @@ SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
+TIM6.Dithering=Disable
+TIM6.IPParameters=Dithering
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=custom
