--- a/hv-bms-cellboard-sw.ioc
+++ b/hv-bms-cellboard-sw.ioc
@@ -21,14 +21,6 @@ ADC2.NbrOfConversionFlag=1
 ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.Rank-0\#ChannelRegularConversion=1
 ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_12
-ADC3.CommonPathInternal=null|null|null|null
-ADC3.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
-ADC3.NbrOfConversionFlag=1
-ADC3.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC3.Rank-0\#ChannelRegularConversion=1
-ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC3.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -43,43 +35,46 @@ Mcu.CPN=STM32G4A1KEU6
 Mcu.Family=STM32G4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP2=ADC3
-Mcu.IP3=FDCAN1
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SPI3
-Mcu.IP7=SYS
-Mcu.IP8=TIM6
+Mcu.IP2=FDCAN1
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI3
+Mcu.IP6=SYS
+Mcu.IP7=TIM6
+Mcu.IP8=TIM7
 Mcu.IP9=USART2
 Mcu.IPNb=10
 Mcu.Name=STM32G4A1KEUx
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PF0-OSC_IN
 Mcu.Pin1=PF1-OSC_OUT
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA11
-Mcu.Pin13=PA12
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PA15
-Mcu.Pin17=PB3
-Mcu.Pin18=PB4
-Mcu.Pin19=PB5
+Mcu.Pin10=PA7
+Mcu.Pin11=PA8
+Mcu.Pin12=PA9
+Mcu.Pin13=PA10
+Mcu.Pin14=PA11
+Mcu.Pin15=PA12
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14
+Mcu.Pin18=PA15
+Mcu.Pin19=PB3
 Mcu.Pin2=PG10-NRST
-Mcu.Pin20=PB6
-Mcu.Pin21=PB7
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_SYS_VS_DBSignals
-Mcu.Pin24=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin20=PB4
+Mcu.Pin21=PB5
+Mcu.Pin22=PB6
+Mcu.Pin23=PB7
+Mcu.Pin24=VP_SYS_VS_Systick
+Mcu.Pin25=VP_SYS_VS_DBSignals
+Mcu.Pin26=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin27=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin3=PA0
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA4
-Mcu.Pin8=PB0
-Mcu.Pin9=PA8
-Mcu.PinsNb=25
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G4A1KEUx
@@ -95,6 +90,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=MUX_OUT0
@@ -136,6 +132,18 @@ PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=MUX_OUT2
 PA4.Mode=IN17-Single-Ended
 PA4.Signal=ADC2_IN17
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=ID_SELECTOR_0
+PA5.Locked=true
+PA5.Signal=GPIO_Input
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=ID_SELECTOR_1
+PA6.Locked=true
+PA6.Signal=GPIO_Input
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=ID_SELECTOR_2
+PA7.Locked=true
+PA7.Signal=GPIO_Input
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=MUX_A0
 PA8.Locked=true
@@ -144,10 +152,6 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=MUX_A1
 PA9.Locked=true
 PA9.Signal=GPIO_Output
-PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=ID_SELECTOR
-PB0.Mode=IN12-Single-Ended
-PB0.Signal=ADC3_IN12
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=LTC_SCK
 PB3.Mode=Full_Duplex_Master
@@ -172,8 +176,9 @@ PF0-OSC_IN.Mode=HSE-External-Oscillator
 PF0-OSC_IN.Signal=RCC_OSC_IN
 PF1-OSC_OUT.Mode=HSE-External-Oscillator
 PF1-OSC_OUT.Signal=RCC_OSC_OUT
-PG10-NRST.GPIOParameters=GPIO_Label
+PG10-NRST.GPIOParameters=GPIO_PuPd,GPIO_Label
 PG10-NRST.GPIO_Label=NRST
+PG10-NRST.GPIO_PuPd=GPIO_PULLUP
 PG10-NRST.Locked=true
 PG10-NRST.Signal=GPIO_Input
 PinOutPanel.RotationAngle=0
@@ -207,7 +212,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_ADC3_Init-ADC3-false-HAL-true,6-MX_FDCAN1_Init-FDCAN1-false-HAL-true,7-MX_SPI3_Init-SPI3-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.ADC345Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
@@ -262,6 +267,9 @@ SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
 TIM6.Dithering=Disable
 TIM6.IPParameters=Dithering
+TIM7.IPParameters=Prescaler,PeriodNoDither
+TIM7.PeriodNoDither=999
+TIM7.Prescaler=169
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
@@ -270,4 +278,6 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=custom
