fix(fdcan): wrong fdcan configuration

--- a/hv-bms-cellboard-sw.ioc
+++ b/hv-bms-cellboard-sw.ioc
@@ -24,10 +24,17 @@ ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-FDCAN1.CalculateBaudRateNominal=2125000
-FDCAN1.CalculateTimeBitNominal=470
-FDCAN1.CalculateTimeQuantumNominal=94.11764705882354
-FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
+FDCAN1.CalculateBaudRateNominal=999999
+FDCAN1.CalculateTimeBitNominal=1000
+FDCAN1.CalculateTimeQuantumNominal=58.82352941176471
+FDCAN1.DataPrescaler=5
+FDCAN1.DataTimeSeg1=14
+FDCAN1.DataTimeSeg2=2
+FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,DataPrescaler,DataTimeSeg1,DataTimeSeg2,StdFiltersNbr,NominalPrescaler,NominalTimeSeg1,NominalTimeSeg2
+FDCAN1.NominalPrescaler=5
+FDCAN1.NominalTimeSeg1=14
+FDCAN1.NominalTimeSeg2=2
+FDCAN1.StdFiltersNbr=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -212,7 +219,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_TIM7_Init-TIM7-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.ADC345Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
@@ -224,7 +231,8 @@ RCC.CRSFreq_Value=48000000
 RCC.CortexFreq_Value=170000000
 RCC.EXTERNAL_CLOCK_VALUE=12288000
 RCC.FCLKCortexFreq_Value=170000000
-RCC.FDCANFreq_Value=170000000
+RCC.FDCANCLockSelection=RCC_FDCANCLKSOURCE_PLL
+RCC.FDCANFreq_Value=85000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=170000000
 RCC.HRTIM1Freq_Value=170000000
@@ -235,7 +243,7 @@ RCC.I2C1Freq_Value=170000000
 RCC.I2C2Freq_Value=170000000
 RCC.I2C3Freq_Value=170000000
 RCC.I2SFreq_Value=170000000
-RCC.IPParameters=ADC12Freq_Value,ADC345Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HRTIM1Freq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLM,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSourceVirtual,PWRFreq_Value,QSPIFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USART2Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.IPParameters=ADC12Freq_Value,ADC345Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANCLockSelection,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HRTIM1Freq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLM,PLLN,PLLPoutputFreq_Value,PLLQ,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSourceVirtual,PWRFreq_Value,QSPIFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USART2Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
 RCC.LPTIM1Freq_Value=170000000
 RCC.LPUART1Freq_Value=170000000
 RCC.LSCOPinFreq_Value=32000
@@ -245,7 +253,8 @@ RCC.MCO1PinFreq_Value=16000000
 RCC.PLLM=RCC_PLLM_DIV4
 RCC.PLLN=85
 RCC.PLLPoutputFreq_Value=170000000
-RCC.PLLQoutputFreq_Value=170000000
+RCC.PLLQ=RCC_PLLQ_DIV4
+RCC.PLLQoutputFreq_Value=85000000
 RCC.PLLRCLKFreq_Value=170000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PWRFreq_Value=170000000
@@ -259,10 +268,12 @@ RCC.USART2Freq_Value=170000000
 RCC.USBFreq_Value=48000000
 RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=340000000
-SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI3.CalculateBaudRate=42.5 MBits/s
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
+SPI3.CLKPhase=SPI_PHASE_2EDGE
+SPI3.CalculateBaudRate=664.062 KBits/s
+SPI3.DataSize=SPI_DATASIZE_8BIT
 SPI3.Direction=SPI_DIRECTION_2LINES
-SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize,CLKPhase
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
 TIM6.Dithering=Disable
