feat(temp): add cell temperature readings

--- a/hv-bms-cellboard-sw.ioc
+++ b/hv-bms-cellboard-sw.ioc
@@ -1,29 +1,44 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
-ADC1.CommonPathInternal=null|null|null|null
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversion,CommonPathInternal
-ADC1.NbrOfConversion=2
-ADC1.NbrOfConversionFlag=1
-ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.Rank-1\#ChannelRegularConversion=2
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_6CYCLES_5
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_6CYCLES_5
-ADC1.master=1
-ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_17
+ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_2
+ADC2.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_17
 ADC2.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
 ADC2.CommonPathInternal=null|null|null|null
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,CommonPathInternal
+ADC2.EOCSelection=ADC_EOC_SEQ_CONV
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,EOCSelection,NbrOfConversion,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,CommonPathInternal
+ADC2.NbrOfConversion=3
 ADC2.NbrOfConversionFlag=1
 ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.Rank-0\#ChannelRegularConversion=1
-ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC2.Rank-1\#ChannelRegularConversion=2
+ADC2.Rank-2\#ChannelRegularConversion=3
+ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_12CYCLES_5
+ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_12CYCLES_5
+ADC2.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_12CYCLES_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.ADC2.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC2.0.EventEnable=DISABLE
+Dma.ADC2.0.Instance=DMA1_Channel1
+Dma.ADC2.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC2.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC2.0.Mode=DMA_CIRCULAR
+Dma.ADC2.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC2.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC2.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.ADC2.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC2.0.RequestNumber=1
+Dma.ADC2.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.ADC2.0.SignalID=NONE
+Dma.ADC2.0.SyncEnable=DISABLE
+Dma.ADC2.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.ADC2.0.SyncRequestNumber=1
+Dma.ADC2.0.SyncSignalID=NONE
+Dma.Request0=ADC2
+Dma.RequestsNb=1
 FDCAN1.CalculateBaudRateNominal=999999
 FDCAN1.CalculateTimeBitNominal=1000
 FDCAN1.CalculateTimeQuantumNominal=58.82352941176471
@@ -40,8 +55,8 @@ GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32G4A1KEU6
 Mcu.Family=STM32G4
-Mcu.IP0=ADC1
-Mcu.IP1=ADC2
+Mcu.IP0=ADC2
+Mcu.IP1=DMA
 Mcu.IP2=FDCAN1
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
@@ -88,6 +103,7 @@ Mcu.UserName=STM32G4A1KEUx
 MxCube.Version=6.11.0
 MxDb.Version=DB.6.0.110
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -101,12 +117,12 @@ NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=MUX_OUT0
-PA0.Mode=IN1-Single-Ended
-PA0.Signal=ADC1_IN1
+PA0.Locked=true
+PA0.Signal=SharedAnalog_PA0
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=MUX_OUT1
-PA1.Mode=IN2-Single-Ended
-PA1.Signal=ADC1_IN2
+PA1.Locked=true
+PA1.Signal=SharedAnalog_PA1
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=MUX_A2
 PA10.Locked=true
@@ -219,7 +235,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_TIM7_Init-TIM7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_TIM7_Init-TIM7-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.ADC345Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
@@ -268,6 +284,12 @@ RCC.USART2Freq_Value=170000000
 RCC.USBFreq_Value=48000000
 RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=340000000
+SH.SharedAnalog_PA0.0=ADC1_IN1
+SH.SharedAnalog_PA0.1=ADC2_IN1,IN1-Single-Ended
+SH.SharedAnalog_PA0.ConfNb=2
+SH.SharedAnalog_PA1.0=ADC1_IN2
+SH.SharedAnalog_PA1.1=ADC2_IN2,IN2-Single-Ended
+SH.SharedAnalog_PA1.ConfNb=2
 SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
 SPI3.CLKPhase=SPI_PHASE_1EDGE
 SPI3.CalculateBaudRate=664.062 KBits/s
