--- a/hv-bms-cellboard-sw.ioc
+++ b/hv-bms-cellboard-sw.ioc
@@ -57,15 +57,16 @@ Mcu.CPN=STM32G4A1KEU6
 Mcu.Family=STM32G4
 Mcu.IP0=ADC2
 Mcu.IP1=DMA
+Mcu.IP10=USART2
 Mcu.IP2=FDCAN1
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SPI3
 Mcu.IP6=SYS
-Mcu.IP7=TIM6
-Mcu.IP8=TIM7
-Mcu.IP9=USART2
-Mcu.IPNb=10
+Mcu.IP7=TIM2
+Mcu.IP8=TIM6
+Mcu.IP9=TIM7
+Mcu.IPNb=11
 Mcu.Name=STM32G4A1KEUx
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PF0-OSC_IN
@@ -87,8 +88,9 @@ Mcu.Pin22=PB6
 Mcu.Pin23=PB7
 Mcu.Pin24=VP_SYS_VS_Systick
 Mcu.Pin25=VP_SYS_VS_DBSignals
-Mcu.Pin26=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin27=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin26=VP_TIM2_VS_no_output1
+Mcu.Pin27=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin28=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin3=PA0
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
@@ -96,7 +98,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=28
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G4A1KEUx
@@ -237,7 +239,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_TIM7_Init-TIM7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_TIM7_Init-TIM7-false-HAL-true,10-MX_TIM16_Init-TIM16-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.ADC345Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
@@ -300,6 +302,9 @@ SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize,CLKPhase
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
+TIM2.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM2.IPParameters=Channel-Output Compare1 No Output,Prescaler
+TIM2.Prescaler=169
 TIM6.Dithering=Disable
 TIM6.IPParameters=Dithering
 TIM7.IPParameters=Prescaler,PeriodNoDither
@@ -311,6 +316,8 @@ VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM2_VS_no_output1.Signal=TIM2_VS_no_output1
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
